--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -744,24 +744,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'function' object has no attribute 'sum'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [47]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Your code here\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m nancols \u001b[38;5;241m=\u001b[39m \u001b[43mwebs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43misna\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msum\u001b[49m()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'function' object has no attribute 'sum'"
-     ]
+     "data": {
+      "text/plain": [
+       "SERVER               1\n",
+       "CONTENT_LENGTH     812\n",
+       "DNS_QUERY_TIMES      1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "nancols = webs.isna.sum()\n"
+    "nan_cols=webs.isna().sum()\n",
+    "\n",
+    "nan_cols[nan_cols>0]"
    ]
   },
   {
@@ -775,11 +779,315 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>URL</th>\n",
+       "      <th>URL_LENGTH</th>\n",
+       "      <th>NUMBER_SPECIAL_CHARACTERS</th>\n",
+       "      <th>CHARSET</th>\n",
+       "      <th>SERVER</th>\n",
+       "      <th>WHOIS_COUNTRY</th>\n",
+       "      <th>WHOIS_STATEPRO</th>\n",
+       "      <th>WHOIS_REGDATE</th>\n",
+       "      <th>WHOIS_UPDATED_DATE</th>\n",
+       "      <th>REMOTE_IPS</th>\n",
+       "      <th>SOURCE_APP_BYTES</th>\n",
+       "      <th>REMOTE_APP_BYTES</th>\n",
+       "      <th>APP_PACKETS</th>\n",
+       "      <th>DNS_QUERY_TIMES</th>\n",
+       "      <th>Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M0_109</td>\n",
+       "      <td>16</td>\n",
+       "      <td>7</td>\n",
+       "      <td>iso-8859-1</td>\n",
+       "      <td>nginx</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>10/10/2015 18:21</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1153</td>\n",
+       "      <td>832</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B0_2314</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>UTF-8</td>\n",
+       "      <td>Apache/2.4.10</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1265</td>\n",
+       "      <td>1230</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B0_911</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>us-ascii</td>\n",
+       "      <td>Microsoft-HTTPAPI/2.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B0_113</td>\n",
+       "      <td>17</td>\n",
+       "      <td>6</td>\n",
+       "      <td>ISO-8859-1</td>\n",
+       "      <td>nginx</td>\n",
+       "      <td>US</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>7/10/1997 4:00</td>\n",
+       "      <td>12/09/2013 0:45</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18784</td>\n",
+       "      <td>4380</td>\n",
+       "      <td>39</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B0_403</td>\n",
+       "      <td>17</td>\n",
+       "      <td>6</td>\n",
+       "      <td>UTF-8</td>\n",
+       "      <td>None</td>\n",
+       "      <td>US</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>12/05/1996 0:00</td>\n",
+       "      <td>11/04/2017 0:00</td>\n",
+       "      <td>5</td>\n",
+       "      <td>129889</td>\n",
+       "      <td>4586</td>\n",
+       "      <td>61</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1776</th>\n",
+       "      <td>M4_48</td>\n",
+       "      <td>194</td>\n",
+       "      <td>16</td>\n",
+       "      <td>UTF-8</td>\n",
+       "      <td>Apache</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>17/09/2008 0:00</td>\n",
+       "      <td>2/09/2016 0:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>186</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1777</th>\n",
+       "      <td>M4_41</td>\n",
+       "      <td>198</td>\n",
+       "      <td>17</td>\n",
+       "      <td>UTF-8</td>\n",
+       "      <td>Apache</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>17/09/2008 0:00</td>\n",
+       "      <td>2/09/2016 0:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>124</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1778</th>\n",
+       "      <td>B0_162</td>\n",
+       "      <td>201</td>\n",
+       "      <td>34</td>\n",
+       "      <td>utf-8</td>\n",
+       "      <td>Apache/2.2.16 (Debian)</td>\n",
+       "      <td>US</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>15/02/1999 0:00</td>\n",
+       "      <td>15/07/2015 0:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>132181</td>\n",
+       "      <td>6945</td>\n",
+       "      <td>87</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1779</th>\n",
+       "      <td>B0_1152</td>\n",
+       "      <td>234</td>\n",
+       "      <td>34</td>\n",
+       "      <td>ISO-8859-1</td>\n",
+       "      <td>cloudflare-nginx</td>\n",
+       "      <td>US</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1/04/1998 0:00</td>\n",
+       "      <td>9/12/2016 0:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1780</th>\n",
+       "      <td>B0_676</td>\n",
+       "      <td>249</td>\n",
+       "      <td>40</td>\n",
+       "      <td>utf-8</td>\n",
+       "      <td>Microsoft-IIS/8.5</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>14/11/2008 0:00</td>\n",
+       "      <td>20/11/2013 0:00</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3039</td>\n",
+       "      <td>2776</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1781 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          URL  URL_LENGTH  NUMBER_SPECIAL_CHARACTERS     CHARSET  \\\n",
+       "0      M0_109          16                          7  iso-8859-1   \n",
+       "1     B0_2314          16                          6       UTF-8   \n",
+       "2      B0_911          16                          6    us-ascii   \n",
+       "3      B0_113          17                          6  ISO-8859-1   \n",
+       "4      B0_403          17                          6       UTF-8   \n",
+       "...       ...         ...                        ...         ...   \n",
+       "1776    M4_48         194                         16       UTF-8   \n",
+       "1777    M4_41         198                         17       UTF-8   \n",
+       "1778   B0_162         201                         34       utf-8   \n",
+       "1779  B0_1152         234                         34  ISO-8859-1   \n",
+       "1780   B0_676         249                         40       utf-8   \n",
+       "\n",
+       "                      SERVER WHOIS_COUNTRY WHOIS_STATEPRO     WHOIS_REGDATE  \\\n",
+       "0                      nginx          None           None  10/10/2015 18:21   \n",
+       "1              Apache/2.4.10          None           None              None   \n",
+       "2      Microsoft-HTTPAPI/2.0          None           None              None   \n",
+       "3                      nginx            US             AK    7/10/1997 4:00   \n",
+       "4                       None            US             TX   12/05/1996 0:00   \n",
+       "...                      ...           ...            ...               ...   \n",
+       "1776                  Apache            ES      Barcelona   17/09/2008 0:00   \n",
+       "1777                  Apache            ES      Barcelona   17/09/2008 0:00   \n",
+       "1778  Apache/2.2.16 (Debian)            US             FL   15/02/1999 0:00   \n",
+       "1779        cloudflare-nginx            US             CA    1/04/1998 0:00   \n",
+       "1780       Microsoft-IIS/8.5            US      Wisconsin   14/11/2008 0:00   \n",
+       "\n",
+       "     WHOIS_UPDATED_DATE  REMOTE_IPS  SOURCE_APP_BYTES  REMOTE_APP_BYTES  \\\n",
+       "0                  None           2              1153               832   \n",
+       "1                  None           4              1265              1230   \n",
+       "2                  None           0                 0                 0   \n",
+       "3       12/09/2013 0:45           3             18784              4380   \n",
+       "4       11/04/2017 0:00           5            129889              4586   \n",
+       "...                 ...         ...               ...               ...   \n",
+       "1776     2/09/2016 0:00           0               186                 0   \n",
+       "1777     2/09/2016 0:00           0               124                 0   \n",
+       "1778    15/07/2015 0:00           6            132181              6945   \n",
+       "1779     9/12/2016 0:00           0                 0                 0   \n",
+       "1780    20/11/2013 0:00          11              3039              2776   \n",
+       "\n",
+       "      APP_PACKETS  DNS_QUERY_TIMES  Type  \n",
+       "0               9              2.0     1  \n",
+       "1              17              0.0     0  \n",
+       "2               0              0.0     0  \n",
+       "3              39              8.0     0  \n",
+       "4              61              4.0     0  \n",
+       "...           ...              ...   ...  \n",
+       "1776            0              0.0     1  \n",
+       "1777            0              0.0     1  \n",
+       "1778           87              4.0     0  \n",
+       "1779            0              0.0     0  \n",
+       "1780           25              6.0     0  \n",
+       "\n",
+       "[1781 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "webs.drop(['CONTENT_LENGTH'], axis=1)"
    ]
   },
   {
